// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LogNewExercise /> should render 1`] = `
<div
  className="new-exercise-hero"
>
  <h3>
    No Exercises Yet
  </h3>
  <button
    id="exercise-cta"
  >
    Log One Now
  </button>
</div>
`;

exports[`<LogNewExercise /> should render passed modal 1`] = `
<div
  className="new-exercise-hero"
>
  <h3>
    No Exercises Yet
  </h3>
  <button
    id="exercise-cta"
  >
    Log One Now
  </button>
  <Modal
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    className="modal-content"
    closeTimeoutMS={0}
    isOpen={false}
    onRequestClose={[Function]}
    overlayClassName="modal-overlay"
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    role="dialog"
    shouldCloseOnEsc={true}
    shouldCloseOnOverlayClick={true}
    shouldFocusAfterRender={true}
    shouldReturnFocusAfterClose={true}
  >
    <mockComponent
      hideModal={[Function]}
    />
  </Modal>
</div>
`;
